api/test_output.txt

> @librechat/backend@v0.8.2 test
> cross-env NODE_ENV=test jest models/Agent.spec.js

[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
FAIL models/Agent.spec.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /app/packages/data-schemas/src/index.ts:1
    export * from './app';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      1 | const crypto = require('node:crypto');
    > 2 | const { logger } = require('@librechat/data-schemas');
        |                    ^
      3 | const { getCustomEndpointConfig } = require('@librechat/api');
      4 | const {
      5 |   Tools,

      at Runtime.createScriptFromCode (../node_modules/jest/node_modules/jest-runtime/build/index.js:1318:40)
      at Object.require (models/Agent.js:2:20)
      at Object.require (models/Agent.spec.js:9:5)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.518 s
Ran all test suites matching models/Agent.spec.js.
npm error Lifecycle script `test` failed with error:
npm error code 1
npm error path /app/api
npm error workspace @librechat/backend@v0.8.2
npm error location /app/api
npm error command failed
npm error command sh -c cross-env NODE_ENV=test jest models/Agent.spec.js
